--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">site generator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg web generator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="t0FmmRMx+Do9wQtG7U4bitSJE92rH2szHA+0R7azWoUGavU+cmB6ylO+0bYAudX3WBeV4VCWPCUjXxe7dSyEdbqVB10c+UbKlLyeWFN2tw6UlgLx0ZbfQGZl14PD1q1U" data-form-email="true">
+                    <input type="hidden" value="rq+zjhoL13EmKG6N8IvukB5V1ikBlZLhvitt72Znv5wjjDj1NQiPOEIZ5T9Ovump32ChUhFSaxbUh4KuUaCqFsfKAk2Ld6aaW8TEtT6jK45XTni44OGiVh8v0aVO501B" data-form-email="true">
 
                     
 
